correction des balises a apres le test W3C

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </section>
         <section id="aside">
             <article class="hotel1">
-                <a class="photo" href="#"></a><img class="popu" src="./images/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt=""></a>
+                <a class="photo" href="#"><img class="popu" src="./images/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt=""></a>
                <div class="coment">
                 <h3> Auberge la Cammenbiere</h3>
                   <p> Nuit à partir de <strong>25$</strong></p>
@@ -114,7 +114,7 @@
                 </div>
             </article>
             <article class="hotel1">
-                <a class="photo" href="#"></a><img class="popu" src="./images/aw-creative-VGs8z60yT2c-unsplash.jpg" alt=""></a>
+                <a class="photo" href="#"><img class="popu" src="./images/aw-creative-VGs8z60yT2c-unsplash.jpg" alt=""></a>
                <div class="coment">
                 <h3>Auberge la Cammenbiere</h3>
                   <p>Nuit à partir de <strong>25$</strong></p>
@@ -126,7 +126,7 @@
                 </div>
             </article>
             <article class="hotel1">
-                <a class="photo" href="#"></a><img class="popu" src="./images/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt=""></a>
+                <a class="photo" href="#"><img class="popu" src="./images/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt=""></a>
                <div class="coment">
                 <h3> Auberge la Cammenbiere</h3>
                   <p> Nuit à partir de <strong>25$</strong></p>
