début implémentation version mobile

--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a href="#">Hébergement</a></li>
-                <li><a href="#">Activités</a></li>
-                <li><a href="#">S'inscrire</a></li>
+                <li><a class="nav1 navigation" href="#">Hébergement</a></li>
+                <li><a class="nav2 navigation" href="#">Activités</a></li>
+                <li><a class="nav3" href="#">S'inscrire</a></li>
             </ul>
         </div>
     </header>
     <section id="recherche">
-        <h3>Trouvez votre Hébergement pour des vacances </h3>
+        <h3>Trouvez votre Hébergement <br> pour des vacances </h3>
         <p>en plein coeur de ville</p>
         <div></div>
         <br>
         <div id="barre">
             <i class="fas fa-map-marker-alt"></i><input type="text" id="name" name="name" required
-            minlength="4" maxlength="8" size="30"  placeholder="Ville ou code postal" class="bouton"><a class="search" href="">Recherche</a>
+            minlength="4" maxlength="8" size="30"  placeholder="Ville ou code postal" class="bouton"><a href="#"><i class="fas fa-search"></i></a><a class="search" href="">Recherche</a>
         </div>
     </section>
 
     <section id="heberge">
         <section id="plus">
             <article class="hotel">
-                <a class="images" href="#"><img class="images" src="./images/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt=""></a>
-                  <h3 class="titre"> Auberge la Cammenbiere</h3>
+                <a class="images" href="#"><img class="images" src="./images/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt=""></a><br><br>
+                  <h4 class="titre"> Auberge la Cammenbiere</h4>
                   <p> Nuit à partir de <strong>25$</strong></p>
                   <i class="far  blue"></i>
                   <i class="far fa-star blue"></i>
@@ -48,7 +48,7 @@
             </article>
             <article class="hotel">
                 <a class="images" href="#"><img class="images" src="./images/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt=""></a>
-                  <h3> Auberge la Cammenbiere</h3>
+                  <h4> Auberge la Cammenbiere</h4>
                   <p> Nuit à partir de <strong>25$</strong></p>
                   <i class="far  blue"></i>
                   <i class="far fa-star blue"></i>
@@ -58,7 +58,7 @@
             </article>
             <article class="hotel">
                 <a class="images" href="#"><img class="images" src="./images/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt=""></a>
-                  <h3> Auberge la Cammenbiere</h3>
+                  <h4> Auberge la Cammenbiere</h4>
                   <p> Nuit à partir de <strong>25$</strong></p>
                   <i class="far  blue"></i>
                   <i class="far fa-star blue"></i>
@@ -68,7 +68,7 @@
             </article>
             <article class="hotel">
                 <a class="images" href="#"><img class="images" src="./images/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt=""></a>
-                  <h3> Auberge la Cammenbiere</h3>
+                  <h4> Auberge la Cammenbiere</h4>
                   <p> Nuit à partir de <strong>25$</strong></p>
                   <i class="far  blue"></i>
                   <i class="far fa-star blue"></i>
@@ -79,7 +79,7 @@
             </article>
             <article class="hotel">
                 <a class="images" href="#"><img class="images" src="./images/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt=""></a>
-                  <h3> Auberge la Cammenbiere</h3>
+                  <h4> Auberge la Cammenbiere</h4>
                   <p> Nuit à partir de <strong>25$</strong></p>
                   <i class="far  blue"></i>
                   <i class="far fa-star blue"></i>
@@ -90,7 +90,7 @@
             </article>
             <article class="hotel">
                 <a class="images" href="#"><img class="images" src="./images/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt=""></a>
-                  <h3> Auberge la Cammenbiere</h3>
+                  <h4> Auberge la Cammenbiere</h4>
                  <p> Nuit à partir de <strong>25$</strong></p>
                   <i class="far  blue"></i>
                   <i class="far fa-star blue"></i>
@@ -104,7 +104,7 @@
             <article class="hotel1">
                 <a class="photo" href="#"><img class="popu" src="./images/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt=""></a>
                <div class="coment">
-                <h3> Auberge la Cammenbiere</h3>
+                <h4> Auberge la Cammenbiere</h4>
                   <p> Nuit à partir de <strong>25$</strong></p>
                   <i class="far  blue"></i>
                   <i class="far fa-star blue"></i>
@@ -117,7 +117,7 @@
             <article class="hotel1">
                 <a class="photo" href="#"><img class="popu" src="./images/aw-creative-VGs8z60yT2c-unsplash.jpg" alt=""></a>
                <div class="coment">
-                <h3>Auberge la Cammenbiere</h3>
+                <h4>Auberge la Cammenbiere</h4>
                   <p>Nuit à partir de <strong>25$</strong></p>
                   <i class="far  blue"></i>
                   <i class="far fa-star blue"></i>
@@ -129,7 +129,7 @@
             <article class="hotel1">
                 <a class="photo" href="#"><img class="popu" src="./images/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt=""></a>
                <div class="coment">
-                <h3> Auberge la Cammenbiere</h3>
+                <h4> Auberge la Cammenbiere</h4>
                   <p> Nuit à partir de <strong>25$</strong></p>
                   <i class="far  blue"></i>
                   <i class="far fa-star blue"></i>
