modification partie filtre desktop

--- a/index.html
+++ b/index.html
@@ -39,12 +39,16 @@
         </div>
     </section>
     <section class="filtre">
-        <a href="#"><i class="fas fa-money-bill-wave"></i>Economique</a>
-        <a href="#"><i class="fas fa-male"></i>familial</a>
-        <a href="#"><i class="fas fa-heart"></i>romantique</a>
-        <a href="#"><i class="fas fa-dog"></i>animaux autorisés</a>
-        
+        <h4>Filtres</h4>
+        <i class="fas fa-money-bill-wave"></i><a href="#">Economique</a>
+        <i class="fas fa-male"></i><a href="#">familial</a>
+        <i class="fas fa-heart"></i><a href="#">romantique</a>
+        <i class="fas fa-dog"></i><a href="#">animaux autorisés</a>  
     </section>
+    <div id="disponible">
+        <i class="fas fa-info-circle"></i>
+        <p>Plus de 500 logements sont disponibles dans cette ville</p>
+    </div>
 
     <!-- section1 des sites d'hébergement -->
     <section id="heberge">
@@ -172,6 +176,7 @@
 
     <!-- section2 des activités -->
     <section id="activite">
+        <h2>activites</h2>
         <div id="act">
            <div class="imag">
               <a class="acti1" href="#"><img class="image1" src="./images/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt=""></a>
@@ -190,6 +195,7 @@
                <a href="#"><img class="image2" src="./images/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=""></a>
                <a href="#"><img class="image2" src="./images/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=""></a>
            </div>
+        </div>
     </section>
 
 <!-- footer -->
