modification de fonds sur la version desktop

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <br>
         <div id="barre">
            <div id="icone"><i class="fas fa-map-marker-alt"></i></div><input type="text" id="name" name="name" required
-            minlength="4" maxlength="8" size="30"  placeholder="Ville ou code postal" class="buton"><a href="#"></a> <button id="bouton">recherche</button>
+            minlength="4" maxlength="8" size="30"  placeholder="Ville ou code postal" class="buton"><a href="#"></a><button id="bouton">Recherche</button><button id="bouton2"><i class="fas fa-search"></i></button>
         </div>
     </section>
     <section class="filtre">
@@ -91,7 +91,6 @@
                 </div> 
             </a>
     
-       
                 <a class="hotel" href="#"><img class="images" src="./images/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
                 <div class="commentaire">
                 <h4> Auberge la Cammenbiere</h4>
@@ -176,7 +175,7 @@
 
     <!-- section2 des activités -->
     <section id="activite">
-        <h2>activites</h2>
+        <h3>Activites à Marseille</h3>
         <div id="act">
            <div class="imag">
               <a class="acti1" href="#"><img class="image1" src="./images/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt=""></a>
@@ -184,16 +183,19 @@
            </div>
            <div class="imag">
              <a class="acti2" href="#"><img class="image2" src="./images/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt=""></a>
-             <p>Hotel la marina</p>
+             <p>Hotel la marina</p><br>
              <a class="acti2" href="#"><img class="image2" src="./images/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt=""></a>
              <p>Hotel la marina</p>
            </div>
            <div class="imag">
                <a class="acti1" href="#"><img class="image1" src="./images/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt=""></a>
-           </div>
+                <p>hotel marina</p>
+        </div>
            <div class="imag">
-               <a href="#"><img class="image2" src="./images/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=""></a>
-               <a href="#"><img class="image2" src="./images/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=""></a>
+               <a class="acti2" href="#"><img class="image2" src="./images/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=""></a>
+               <p>hotel marina</p><br>
+               <a class="acti2" href="#"><img class="image2" src="./images/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=""></a>
+               <p>hotel de marina</p>
            </div>
         </div>
     </section>
