début du responsive design

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
         </section>
         <section class="filtre">
             <h4>Filtres</h4>
-            <div class="filtrage">
+            <div class=" filtrage filtre1">
                 <i class="fas fa-money-bill-wave"></i><a href="#">Economique</a>
             </div>
-            <div class="filtrage">
-                <i class="fas fa-male"></i><a href="#">familial</a>
+            <div class=" filtrage filtre2">
+                <i class="fas fa-child fa-lg"></i><a href="#">familial</a>
             </div>
             <div class="filtrage romantique">
                 <i class="fas fa-heart"></i><a href="#">romantique</a>
             </div>
-            <div class="filtrage">
+            <div class="filtrage filtre4">
                 <i class="fas fa-dog"></i><a href="#">animaux autorisés</a>
             </div>
         </section>
@@ -148,7 +148,7 @@
                     
                 </div>
             </a>
-
+                <a href="">Afficher Plus</a>
         </section>
         <!-- zone des sites populaires aside -->
         <section id="aside">
@@ -202,9 +202,11 @@
     <!-- section2 des activités -->
     
     <section id="activite">
-        <h3 class="act">Activité à Marseille</h3>
+        <div id="act">
+            <h3>Activites à Marseille</h3>
+        </div>
        <div class="img shadow">
-       <a  href=""><img class="image1 arrondi" src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=""></a>
+       <a href=""><img class="image1 arrondi" src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=""></a>
        <p>Vieux port</p>
        </div>
        <div class="imgdouble">
