--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </div>
 
     <!-- section1 des sites d'hébergement -->
+    <div class="container">
     <section id="heberge">
         <h3 id="marseille">Hébergement à Marseille</h3>
         <!-- zone principale des sites -->
@@ -235,7 +236,7 @@
     </div>
         </div>
     </section>
-
+</div>
     <!-- footer -->
 
     <footer id="footer">
