--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,300;0,400;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
     <title>Acceuil</title>
 </head>
 
@@ -33,7 +32,7 @@
     <!-- zone de recherche -->
     <div class="container">
         <section id="recherche">
-            <h3>Trouvez votre Hébergement pour des vacances de rêve </h3><br>
+            <h2>Trouvez votre Hébergement pour des vacances de rêve </h2><br>
             <p>en plein coeur de ville ou en pleine nature</p><br>
             <br>
             <div id="barre">
@@ -43,31 +42,34 @@
                         class="fas fa-search"></i></button>
             </div>
         </section>
+        
         <section class="filtre">
             <h4>Filtres</h4>
             <div class=" filtrage filtre1">
-                <i class="fas fa-money-bill-wave"></i><a href="#">Economique</a>
+                <a href="#"><i class="fas fa-money-bill-wave"></i><span>Economique</span></a>
             </div>
             <div class=" filtrage filtre2">
-                <i class="fas fa-child fa-lg"></i><a href="#">familial</a>
+                </i><a href="#"><i class="fas fa-child fa-lg"></i><span>familial</span></a>
             </div>
             <div class="filtrage romantique">
-                <i class="fas fa-heart"></i><a href="#">romantique</a>
+                <a href="#"><i class="fas fa-heart"></i><span>romantique</span></a>
             </div>
             <div class="filtrage filtre4">
-                <i class="fas fa-dog"></i><a href="#">animaux autorisés</a>
+                <a href="#"><i class="fas fa-dog"></i><span>animaux autorisés</span> </a>
             </div>
         </section>
         <div id="disponible">
             <i class="fas fa-info-circle"></i>
             <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
-    </div>
+</div>
 
     <!-- section1 des sites d'hébergement -->
     <div class="container">
     <section id="heberge">
-        <h3 id="marseille">Hébergement à Marseille</h3>
+        <div>
+            <h3 id="marseille">Hébergement à Marseille</h3>
+         </div>
         <!-- zone principale des sites -->
         <section id="plus">
 
@@ -149,7 +151,7 @@
                     
                 </div>
             </a>
-                <a href="">Afficher Plus</a>
+                <a  class="Afficher" href="#">Afficher Plus</a>
         </section>
         <!-- zone des sites populaires aside -->
         <section id="aside">
@@ -163,7 +165,7 @@
                     alt="">
                 <div class="coment">
                     <h4>Hotel le soleil du matin</h4><br>
-                    <p> Nuit à partir de <strong>25$</strong></p><br><br><br><br>
+                    <p> Nuit à partir de <strong>25$</strong></p><br>
                     <i class="fas fa-star blue"></i>
                     <i class="fas fa-star blue"></i>
                     <i class="fas fa-star blue"></i>
@@ -175,7 +177,7 @@
                     alt="">
                 <div class="coment">
                     <h4>Au coeur de l'eau <br> Chambres d'hotes</h4><br>
-                    <p>Nuit à partir de <strong>25$</strong></p><br><br><br>
+                    <p>Nuit à partir de <strong>25$</strong></p><br><br>
                     <i class="fas  blue"></i>
                     <i class="fas fa-star blue"></i>
                     <i class="fas fa-star blue"></i>
@@ -189,7 +191,7 @@
                     alt="">
                 <div class="coment">
                     <h4> Hotel Tout bleu et <br> Blanc</h4><br>
-                    <p> Nuit à partir de <strong>25$</strong></p><br><br><br>
+                    <p> Nuit à partir de <strong>25$</strong></p><br><br>
                     <i class="fas  blue"></i>
                     <i class="fas fa-star blue"></i>
                     <i class="fas fa-star blue"></i>
@@ -207,31 +209,31 @@
             <h3>Activites à Marseille</h3>
         </div>
        <div class="img shadow">
-       <a href=""><img class="image1 arrondi" src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=""></a>
+       <a href="#"><img class="image1 arrondi" src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=""></a>
        <p>Vieux port</p>
        </div>
        <div class="imgdouble">
        <div class="img shadow">
-       <a href=""><img class="image2 arrondi" src="./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=""></a>
+       <a href="#"><img class="image2 arrondi" src="./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=""></a>
        <p>fort de Pomègue</p>
        </div>
        <div class="img shadow">
-       <a href=""><img class="image2 arrondi" src="./images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt=""></a>
+       <a href="#"><img class="image2 arrondi" src="./images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt=""></a>
        <p>Ile de Frioul</p>
     </div>
         </div>
 
        <div class="img shadow">
-       <a href=""><img class="image1 arrondi" src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt=""></a>
+       <a href="#"><img class="image1 arrondi" src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt=""></a>
        <p>Parc National de Calanques</p>
     </div>
        <div>
        <div class="img shadow">
-       <a href=""><img class="image2 arrondi" src="./images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt=""></a>
+       <a href="#"><img class="image2 arrondi" src="./images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt=""></a>
        <p>Notre Dame de la garde</p>
     </div>
        <div class="img shadow">
-       <a href=""><img class="image2 arrondi" src="./images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt=""></a>
+       <a href="#"><img class="image2 arrondi" src="./images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt=""></a>
        <p>Parc Longchamp</p>
     </div>
         </div>
