--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <img class="arrondi" src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
                             </div>
                             <p class="article-info">
-                               <strong>Hotel les mouettes</strong>
+                               <strong>Hotel les mouettes</strong><br>
                                 Nuit à partir de  <strong>25$ </strong><br><br>
                              <i class="fas fa-star xs blue fa-xs"></i>
                              <i class="fas fa-star blue fa-xs"></i>
