correction header et zone d'activites

--- a/index.html
+++ b/index.html
@@ -235,43 +235,46 @@
 
     <!-- section2 des activités -->
     <div class="container">
-        <section id="activite">
+    
         <div id="act">
-            <h3>Activites à Marseille</h3>
+           <h3>Activites à Marseille</h3>
         </div>
-       <div class=" img2 shadow">
+        <section id="activite">  
+           
+       <div class=" img2 shadow activites">
             <a href="#"><img class="image1 arrondi" src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=""></a>
             <p class="para-grandeimg">Vieux port</p>
        </div>
-            <div class="imgdouble">
-            <div class="img shadow">
-            <a href="#"><img class="image2 arrondi" src="./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=""></a>
-            <p>fort de Pomègue</p>
-       </div>
-       <div class="img shadow">
-            <a href="#"><img class="image2 arrondi" src="./images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt=""></a>
-             <p>Ile de Frioul</p>
-       </div>
+
+        <div class="imgdouble activites">
+            <div class="picture shadow" id="double">
+              <a href="#"><img class="image2 arrondi" id="image3" src="./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt=""></a>
+              <p>fort de Pomègue</p>
+            </div>
+            <div class="picture shadow">
+               <a href="#"><img class="image2 arrondi" src="./images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt=""></a>
+               <p>Ile de Frioul</p>
+            </div>
         </div>
 
-       <div class="img2 shadow">
+       <div class="img2 shadow activites">
             <a href="#"><img class="image1 arrondi" src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt=""></a>
             <p class="para-grandeimg">Parc National de Calanques</p>
       </div>
-       <div class="imgdouble">
-       <div class="img shadow">
+       <div class="imgdouble activites">
+       <div class="picture shadow">
             <a href="#"><img class="image2 arrondi" src="./images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt=""></a>
             <p>Notre Dame de la garde</p>
       </div>
-       <div class="img shadow">
-       <a href="#"><img class="image2 arrondi" src="./images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt=""></a>
+       <div class="picture shadow" id="dubble">
+       <a href="#"><img class="image2 arrondi" id="image6" src="./images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt=""></a>
        <p>Parc Longchamp</p>
     </div>
         </div>
     </section>
   </div>
 
-    <!-- footer -->
+
 
     <footer id="footer">
         <div class="container">
