--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <h3 id="titleactivite">Activités à Marseille</h3>
 
         <section id="activite">
-
+            <h2>pppp</h2>
             <div class=" img2 shadow activites zoom">
                 <a href="#"><img class="image1 arrondi" src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=""></a>
                 <p class="para-grandeimg">Vieux port</p>
